--- a/INSTALL
+++ b/INSTALL
@@ -1,6 +1,21 @@
-# You don't have to do this unless you're building it from scratch
-# This has already been done in the external distribution
-- Unzip a gemstone product distribution into the gemstone/ directory
-- Copy the ruby extent from gemstone/bin to data/extent0.ruby.dbf
-- Copy a key to etc/maglev.demo.key
-- Load MagLev-mrm.222.mcz or later
+If you are reading this file, you must have successfully unzipped MagLev,
+but there are some prerequisites for it to run correctly.
+
+You must have MRI 1.8.6 installed. 1.8.7 may work, but is untested.
+You must have the ParseTree gem installed, if it is not:
+	gem install ParseTree
+if you are asked, pick 2.2.0
+
+If 'gemstone status' tells you "MagLev Parse Server is not running on port 2001"
+it is most likely a problem running the ParseTree gem. To diagnose:
+	export PARSETREE_PORT=2001
+	cd $MAGLEV_HOME/bin
+	ruby parsetree_parser.rb
+If that gives the following error on MacOSX:
+	ERROR: Can’t find header dir for ruby
+you can resolve the problem by upgrading to the latest Xcode
+	http://developer.apple.com/technology/xcode.html
+
+'gemstone status' uses the lsof command to see if the parse server
+is running. If you do not have lsof installed, or cannot run it,
+uncomment the equivalent netstat command in $MAGLEV_HOME/bin/gemstone.
