Reorganize to use the RLC kernel/common and kernel/delta directories.
Moved Enumerable to kernel/common, since it is substantially the Rubinius
version.  Added Array.rb, Dir.rb and Range.rb to kernel/delta, so that they
can then include Enumerable and override methods as appropriate.

--- a/src/kernel/common/README
+++ b/src/kernel/common/README
@@ -1,2 +1,8 @@
-This RCL directory contains commonly shared ruby files.
+This RCL directory contains files common, or substantially common, with
+other implementations of Ruby (notably, Rubinius).
+
 Files in this directory are loaded after those in kernel/bootstrap.
+
+The delta directory contains files that override definitions in this
+directory (usually for performance reasons).
+
