--- a/src/kernel/delta/README
+++ b/src/kernel/delta/README
@@ -1,2 +1,3 @@
-This RCL directory contains ruby files that optimize/override methods defined in kernel/common.
-Files in this directory are loaded after those in kernel/common.
+This RCL directory contains ruby files that optimize/override methods
+defined in kernel/common.  Files in this directory are loaded after those
+in kernel/common.
