INSTALL - fix typos. Behavior.rb - fix signature of public/private , add class_variables Fixnum, Globals - comments Module.rb - delete class_variables Object.rb - alphabetize file, add primitive for is_a? , add instance_variable meths Regexp.rb - fix signature of initialize for optional args String.rb - fix signature of gsub, add to_sym kernel.rb - require Type.rb before Object.rb test/Regexp - adjust for optional args changes. test/simple.rb - stop on error for debugging

--- a/INSTALL
+++ b/INSTALL
@@ -12,7 +12,7 @@ it is most likely a problem running the ParseTree gem. To diagnose:
 	cd $MAGLEV_HOME/bin
 	ruby parsetree_parser.rb
 If that gives the following error on MacOSX:
-	ERROR: Can’t find header dir for ruby
+	ERROR: Cannot find header dir for ruby
 you can resolve the problem by upgrading to the latest Xcode
 	http://developer.apple.com/technology/xcode.html
 
