--- a/spec/tags/frozen/1.8/language/order_tags.txt
+++ b/spec/tags/frozen/1.8/language/order_tags.txt
@@ -1,2 +1,3 @@
 fails:A method call evaluates arguments after receiver
 fails:A method call evaluates block pass before arguments
+fails:A method call evaluates block pass before receiver
