--- a/docs/release_notes
+++ b/docs/release_notes
@@ -22,8 +22,11 @@ provided by different classes and messages
 * <tt>ThreadGroup</tt> is a stub.
 
 === Noise from rlwrap
-* In some cases, <tt>rlwrap</tt> (see Prerequisites[link:files/docs/prerequisites])
-will output noise while typing at a Topaz prompt.
+* In some cases, <tt>rlwrap</tt> (see Prerequisites[link:files/docs/prerequisites]) will output noise while typing at a Topaz prompt (Linux only).
+ 
+=== Initial startup
+* The first time you run maglev-ruby or maglev-irb after installing MagLev there will be a delay of up to 30 seconds for system initialization. 
+* If you run maglev-irb immediately after installing MagLev, you may get an "Almost out of Memory" warning and a stack trace (Macintosh only). This can be safely ignored as it does not affect operation of the system.
  
 === Misc
 * +ARGF+ is not supported.
