Fix links to LICENSES.txt

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 == License
 
-Please see LICENSES[link:files/LICENSES.html] in this directory.
+Please see LICENSES.txt[link:files/LICENSES_txt.html] in this directory.
 
 == Prerequisites
 
